# DaStaA

./: .gitignore  .gitmodules  CMakeLists.txt
include/: CircleLinkedList.hpp  DoubleLinkedList.hpp  Node.hpp  SingleLinkedList.hpp
src/: Node.cpp
unit-tests/: CMakeLists.txt
unit-tests/src/Node/: CMakeLists.txt  Node.Test.cpp
